Fixed mobile issue with CSS
fixed menu bar
fixed background not loading
fixed chicken
more responsive, hopefully less likely to look bad

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,21 @@
+:root{
+    --background_color: #161616;
+}
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Satoshi', sans-serif;
+    font-family: 'Satoshi', sans-serif; 
     font-weight: lighter;
 }
 
 html{
     scroll-behavior: smooth;
+}
+
+body{
+    background-color: var(--background_color);
 }
 
 .hidden{
@@ -30,7 +38,7 @@ html{
 }
 
 .navbar{
-    background: #131313;
+    background-color: #131313;
     height: 80px;
     display: flex;
     justify-content: center;
@@ -41,11 +49,19 @@ html{
     z-index: 999;
 }
 
+.navbar__blackbar{
+    position: absolute;
+    width: 100%;
+    height: 100%;       /* if Want to adjust this go to .navbar to adjust*/
+    background-color: #131313;
+    z-index: 0;
+}
+
 .navbar__container{
     display: flex;
     justify-content: space-between;
     height: 80px;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
@@ -53,7 +69,6 @@ html{
 }
 
 #navbar__logo{
-    background-color: goldenrod;
     background-image: linear-gradient(to top, #c06a24 0%, #FFFEB9 100%);
     background-size: 100%;
     -webkit-background-clip: text;
@@ -65,6 +80,7 @@ html{
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
+    z-index: 1;
 }
 
 .icon{
@@ -80,6 +96,7 @@ html{
 
 .navbar__item{
     height: 80px;
+    z-index: 2;
 }
 
 .navbar__links{
@@ -98,20 +115,15 @@ html{
     justify-content: center;
     align-items: center;
     padding: 1rem;
-    height: 93%;
+    min-height: 100%;
     width: 100%;
     font-size: large;
+    z-index: 2;
 }
 
 .button{
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
     text-decoration: none;
     padding: 10px 20px;
-    height: 100%;
-    width: 100%;
     border: none;
     outline: none;
     border-radius: 4px;
@@ -136,12 +148,15 @@ html{
 }
 
 @media screen and (max-width: 960px){
+    .navbar{
+        width: 120vw;
+    }
+
     .navbar__container{
         display: flex;
         justify-content: space-between;
         height: 80px;
-        z-index: 1;
-        width: 1300px;
+        z-index: 999; 
         padding: 0;
     }
 
@@ -160,11 +175,11 @@ html{
     }
 
     .navbar__menu.active{
-        background: #131313;
+        background: #151515;
         top: 100%;
         opacity: 1;
         transition: all 0.5s ease;
-        z-index: 99;
+        z-index: -1;
         height: 50vh;
         font-size: 1.6rem;
     }
@@ -174,11 +189,14 @@ html{
     }
 
     .navbar__toggle .bar{
+        display: block;
+        cursor: pointer;
         width: 25px;
         height: 3px;
         margin: 5px auto;
         transition: all 0.3s ease-in-out;
         background: white;
+        z-index: 1;
     }
     
     .navbar__item{
@@ -200,21 +218,15 @@ html{
     }
 
     .navbar__btn{
-        padding-bottom: 2rem;
+        padding-bottom: 1rem;
     }
 
     .button{
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 80%;
-        height: 80px;
-        margin: 0;
-    }
-
-    .navbar__toggle .bar{
-        display: block;
-        cursor: pointer;
+        width: 70%;
+        height: 3rem;
     }
 
     #mobile-menu.is-active .bar:nth-child(2){
@@ -237,7 +249,7 @@ html{
 }
 
 .main{
-    background-color: #151515;
+    background-color: var(--background_color);
 }
 
 .main__container{
@@ -247,8 +259,7 @@ html{
     justify-self: center;
     margin: 0 auto;
     min-height: 100vh;
-    /* height: 90vh; */
-    background-color: #151515;
+    background-color: var(--background_color);
     z-index: 1;
     width: 100%;
     max-width: 1300px;
@@ -330,6 +341,18 @@ html{
     width: 100%;
 }
 
+model-viewer{
+    width: 25vw;
+    height: 50vh;
+    margin-left: 15%;
+}
+
+.model-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .main__model--container{
     justify-content: center;
     overflow: hidden;
@@ -364,11 +387,6 @@ html{
         margin-top: 1rem;
         font-size: 1rem;
     }
-
-    model-viewer {
-        width: 250px;
-        height: 300px;
-    }
 }
 
 @media screen and (max-width: 630px){
@@ -399,13 +417,11 @@ html{
 }
 
 .projects{
-    background-color: #151515;
+    background-color: var(--background_color);
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: 90vh
-
-    /* height: 90vh; */
 }
 
 .projects h1{
@@ -420,6 +436,7 @@ html{
     background-size:  100%;
     margin-bottom: 5rem;
     font-size: 4rem;
+    text-align: center;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -441,43 +458,26 @@ html{
     background-size: cover;
     position: relative;
     color: white;
-    
 }
 
 .projects__card:nth-child(2){
-    margin: 1rem;
-    height: 525px;
-    width: 400px;
-    border-radius: 4px;
     background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17,0.6) 100%), url('images/wdwgw Thunbnail2.png');
-    background-size: cover;
-    position: relative;
-    color: white;
     transition-delay: 200ms;
 }
 
 .projects__card:nth-child(3){
-    margin: 1rem;
-    height: 525px;
-    width: 400px;
-    border-radius: 4px;
     background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17,0.6) 100%), url('images/Portfolio Thumbnail.png');
-    background-size: cover;
-    position: relative;
-    color: white;
     transition-delay: 400ms;
 }
 
-.projects h2{
-    position: absolute;
+.projects__text{
     top: 350px;
-    left: 30px;
+    left:30px;
+    position: absolute;
 }
 
 .projects__card p{
-    position: absolute;
-    top: 400px;
-    left:30px;
+    margin-bottom: 6%;
 }
 
 .projects__card button{
@@ -487,9 +487,6 @@ html{
     outline: none;
     border-radius: 4px;
     background-color: #c2b280;
-    position: absolute;
-    top: 440px;
-    left: 30px;
     font-size: 1rem;
     cursor: pointer;
 }
@@ -538,7 +535,7 @@ html{
 
 /* Footers CSS */
 .footer__container{
-    background-color: #151515;
+    background-color: var(--background_color);
     padding: 5rem 0;
     display: flex;
     flex-direction: column;
